[package]
name = "bitcoincore-rest"
version = "2.0.0"
authors = ["Andrew Toth"]
license = "MIT"
homepage = "https://github.com/andrewtoth/rust-bitcoincore-rest/"
repository = "https://github.com/andrewtoth/rust-bitcoincore-rest/"
documentation = "https://docs.rs/bitcoincore-rest/"
description = "Rust REST client for Bitcoin Core REST API"
keywords = ["crypto", "bitcoin", "bitcoincore", "rest", "api"]
readme = "README.md"
edition = "2021"

[features]
default = ["use-reqwest"]
use-reqwest = ["reqwest", "url"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1"
bitcoin = "0.30"
bitcoincore-rpc-json = "0.17"
bytes = "1"
http = "0.2.9"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
url = { version = "2.4.0", optional = true }


[dev-dependencies]
bitcoind = { version = "0.32.0", features = ["25_0"] }
env_logger = "0.10"
tokio = { version = "1.21", features = ["macros"] }
