[package]
name = "bitcoincore-rest"
version = "4.0.0"
authors = ["Andrew Toth"]
license = "MIT"
homepage = "https://github.com/andrewtoth/rust-bitcoincore-rest/"
repository = "https://github.com/andrewtoth/rust-bitcoincore-rest/"
documentation = "https://docs.rs/bitcoincore-rest/"
description = "Rust REST client for Bitcoin Core REST API"
keywords = ["crypto", "bitcoin", "bitcoincore", "rest", "api"]
readme = "README.md"
edition = "2021"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["use-reqwest"]
use-reqwest = ["reqwest", "url"]

[dependencies]
async-trait = "0.1"
bitcoin = "0.30"
bitcoincore-rpc-json = "0.17"
bytes = "1"
http = "0.2"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
url = { version = "2.4", optional = true }


[dev-dependencies]
bitcoind = { version = "0.33", features = ["25_1"] }
env_logger = "0.10"
serde_json = "1.0.107"
tokio = { version = "1.33", features = ["macros"] }
